# sune

./: Cargo.toml  README.md  justfile
src/: cli.rs  client.rs  lib.rs  main.rs  spec.rs
